Added screens for bed types and room extras.

--- a/webapp/src/app/index.html
+++ b/webapp/src/app/index.html
@@ -8,6 +8,7 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/bedtypes/style.css">
     <link rel="stylesheet" href="/css/roomextras/style.css">
     <link rel="stylesheet" href="/css/todo/todo.css">
     <!-- endinject -->
@@ -26,7 +27,9 @@
 <script src="/todo/todo.js"></script>
 <script src="/todo/todo-controller.js"></script>
 <script src="/roomextras/module.js"></script>
-<script src="/roomextras/controller.js"></script>
+<script src="/roomextras/RoomExtras.js"></script>
+<script src="/bedtypes/module.js"></script>
+<script src="/bedtypes/BedTypes.js"></script>
 <script src="/app.js"></script>
 <script src="/webapp-templates.js"></script>
 <!-- endinject -->
